# IEUK-Project-2026

./: CMakeLists.txt  Dockerfile  Engineering Report.txt  README.md  telemetry_data(in).csv
src/: main.cpp
